# narrativeengine

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  COMPILATION_FIXES_SUMMARY.md  Cargo.toml  README.md  README.template.md  SKILL.md  SKILL.template.md  USAGE.md  apply_changes.py  debug.py  justfile  package-lock.json  package.json  rustfmt.toml  test_regex.py  test_regex_2.py  tsconfig.json  tsup.cli.ts  tsup.config.ts  tsup.lab.ts
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: AGENTS.md  build.yml  ci.yml  cli-release.yml  docs.yml  lint.yml  publish-nap-core.yml  publish-nap-python.yml  publish-nap-typescript.yml  test.yml  (+4 more)
crates/core/: Cargo.toml
crates/core/examples/: parity_json.rs
crates/core/src/: error.rs
crates/nap-cli/: Cargo.toml
crates/nap-cli/src/: lib.rs  main.rs
crates/nap-cli/tests/: INTEGRATION_TESTS.md  cloud_lore_suite.rs  e2e_lore.rs  local_lore_suite.rs  test_cli.rs  test_parser.rs  workflow_integration_suite.rs
crates/nap-core/: Cargo.toml  build.rs
crates/nap-core/.lore/: config.toml  id  instance
crates/nap-core/.lore/immutable/index/33/: index_00  level
crates/nap-core/.lore/immutable/index/33/pack/: 1
crates/nap-core/.lore/immutable/index/61/: index_00
crates/nap-core/.lore/immutable/index/61/pack/: 1
crates/nap-core/.lore/immutable/index/c7/: index_00
crates/nap-core/.lore/immutable/index/c7/pack/: 1
crates/nap-core/.lore/mutable/index/1b/: index_00
crates/nap-core/.lore/mutable/index/26/: index_00
crates/nap-core/.lore/mutable/index/39/: index_00
crates/nap-core/.lore/mutable/index/a6/: index_00
crates/nap-core/.lore/mutable/index/c3/: index_00
crates/nap-core/.lore/mutable/index/d8/: index_00
crates/nap-core/proto/lore/model/v1/: model.proto
crates/nap-core/proto/lore/repository/v1/: repository.proto
crates/nap-core/proto/lore/revision/v1/: revision.proto
crates/nap-core/src/: commit.rs  content.rs  error.rs  grpc_client.rs  lib.rs  manifest.rs  query.rs  repo_service.rs  repository.rs  resolver.rs  schema.rs  storage.rs  types.rs  uri.rs  vcs.rs  vcs_git.rs  vcs_lore.rs
crates/nap-core/src/merge/: atomic_write.rs  conflict.rs  diff.rs  merge_engine.rs  mod.rs  normalization.rs  path.rs  sdl.rs
crates/nap-core/src/merge/strategies/: atomic.rs  deep_merge.rs  edge_list.rs  mod.rs  ordered_unique.rs  replace.rs  set_union.rs
crates/nap-core/src/provider/: local.rs  mod.rs  portals_cloud.rs  remote.rs
crates/nap-core/src/repository_api/: fallback.rs  mod.rs
crates/nap-core/src/server/: cert.rs  config.rs  doctor.rs  error_ids.rs  install.rs  lock.rs  logging.rs  manager.rs  mod.rs  process.rs  version.rs
crates/nap-core/src/test_utils/: contract.rs  mock_backend.rs  mock_repository.rs  mod.rs
crates/nap-core/src/validation/: manifest.rs  merge.rs  mod.rs  sdl.rs
crates/nap-core/tests/: lore_version_integration.rs
crates/nap-docgen/: Cargo.toml
crates/nap-docgen/src/: cargo_meta.rs  clap_walk.rs  compose_readme.rs  compose_skill.rs  dot.rs  examples.rs  filesystem.rs  help_snapshots.rs  json_out.rs  main.rs  markdown.rs  mermaid.rs  model.rs  templates.rs  util.rs  yaml_out.rs
crates/nap-server/: Cargo.toml
crates/nap-server/src/: main.rs
crates/nap-test-utils/: Cargo.toml
crates/nap-test-utils/src/: contract.rs  fixtures.rs  lib.rs  mock_backend.rs  mock_repository.rs
crates/narrativeengine/: Cargo.toml  build.rs
crates/narrativeengine-codegen/: Cargo.toml
crates/narrativeengine-codegen/src/: main.rs
crates/narrativeengine-core/: Cargo.toml
crates/narrativeengine-core/examples/: parity_json.rs
crates/narrativeengine-core/proptest-regressions/: engine.txt
crates/narrativeengine-core/src/: engine.rs  lib.rs  schema.rs  validation.rs
crates/narrativeengine-core/tests/: json_contract.rs
crates/narrativeengine-py/: Cargo.toml
crates/narrativeengine-py/src/: lib.rs
crates/narrativeengine-ts/: Cargo.toml
crates/narrativeengine-ts/src/: lib.rs
crates/narrativeengine/examples/: parity_json.rs
crates/narrativeengine/proto/narrative/v1/: narrative.proto
crates/narrativeengine/src/: engine.rs  lib.rs  mocks.rs  provider.rs  schema.rs  sequence.rs  trace.rs  types.rs  utils.rs  validation.rs
crates/narrativeengine/tests/: json_contract.rs
crates/python-bindings/: Cargo.toml
docs/: EXAMPLES.md  merge-semantics-v2.md  narrativeengine.md  remote-lore-tunnel.md
lab/: App.tsx  configure-lab-engine.ts  logger.ts  server.ts
nap-cli/: Cargo.toml
nap-core/: Cargo.toml
nap-mcp-server/: package-lock.json  package.json
narrativeengine/crates/codegen/: Cargo.toml
narrativeengine/crates/codegen/src/: main.rs
narrativeengine/crates/typescript-bindings/: Cargo.toml
python/: README.md  pyproject.toml
python/nap-sdk/: Cargo.toml  pyproject.toml
python/nap-sdk/nap_sdk/: __init__.py
python/nap-sdk/src/: lib.rs
python/narrativeengine/: Cargo.toml  __init__.py  _native.pyi  pyproject.toml  types.py
python/narrativeengine/narrativeengine/: __init__.py  _native.pyi
python/narrativeengine/src/: lib.rs
python/narrativeengine/tests/: test_sdk.py
python/tests/: test_sdk.py
scripts/: build-all.sh  build-python.sh  build-rust.sh  build-typescript.sh  build_and_install.sh  generate-docs.sh  generate-types.mjs  generate-types.sh  install.sh  pre-publish-check.mjs  publish-all.sh  release.sh  test-all.sh  test-integration-cloud.sh  test-integration-local.sh  test-parity.sh
src/: cli-loading.test.ts  engine.test.ts  engine.ts  index.ts  lab.test.ts  lab.ts  mocks.ts  provider.test.ts  provider.ts  sequence.test.ts  sequence.ts  trace.ts  types.ts  utils.test.ts  utils.ts
typescript/: README.md  index.cjs  package-lock.json  package.json  tsconfig.json
typescript/nap-sdk/: Cargo.toml  index.d.ts  package-lock.json  package.json
typescript/nap-sdk/src/: index.ts  lib.rs  native.ts
typescript/narrativeengine/: Cargo.toml  eslint.config.js  index.cjs  index.d.ts  package-lock.json  package.json
typescript/narrativeengine/src/: lib.rs  native.ts
typescript/narrativeengine/tests/: generate-types.test.ts
(+58 files in other folders)
