[workspace]
members = [
    "nap-core",
    "nap-cli",
    "nap-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Cinematic Canvas <team@cinematiccanvas.com>"]
description = "Narrative Addressing Protocol — identity, addressing, resolution, and attribution for entertainment media"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Hashing / Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
hex = "0.4"

# Git backend (pure Rust)
gix = { version = "0.72", default-features = false, features = [
    "max-performance-safe",
    "blocking-network-client",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JSON Schema validation
jsonschema = "0.30"

# Diff
similar = "2"
