[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/python-bindings",
  "crates/typescript-bindings",
  "crates/codegen",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/example/narrativeengine"
homepage = "https://github.com/example/narrativeengine"
documentation = "https://github.com/example/narrativeengine"
rust-version = "1.96.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"
proptest = "1.5"
pyo3 = { version = "0.22", features = ["abi3-py310"] }
rstest = "0.23"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"

