[workspace]
resolver = "2"
members = [
    "crates/nap-core",
    "crates/nap-cli",
    "crates/nap-server",
    "crates/narrativeengine",
    "crates/narrativeengine-codegen",
    "python/nap-sdk",
    "python/narrativeengine",
    "typescript/nap-sdk",
    "typescript/narrativeengine",
]

[workspace.package]
version = "0.2.6"
edition = "2024"
license = "MIT"
authors = ["Cinematic Canvas <team@cinematiccanvas.com>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
schemars = "0.8"

# Hashing / Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
hex = "0.4"

# Git backend (pure Rust)
gix = { version = "0.72", default-features = false, features = [
    "max-performance-safe",
    "blocking-network-client",
] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JSON Schema validation
jsonschema = "0.30"

# Diff
similar = "2"

# NAPI bindings (TypeScript SDK)
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"
napi-build = "2.3"

# Python bindings
pyo3 = { version = "0.22" }

# Testing
proptest = "1.5"
rstest = "0.23"
tempfile = "3"

# Random
rand = "0.9"

# Encoding
base64 = "0.22"
