[package]
name = "nap-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for the Narrative Addressing Protocol"

[[bin]]
name = "nap"
path = "src/main.rs"

[features]
default = []
lore-e2e = []

[dependencies]
nap-core = { path = "../nap-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
[lib]
path = "src/main.rs"
