[package]
name = "nap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the Narrative Addressing Protocol"
repository = "https://github.com/DigitalCreationsCo/narrativeengine"
homepage = "https://nap.sh"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
similar = { workspace = true }
rand = { workspace = true }
toml = "0.8"

# gRPC client for lore-server mutable store (branch ref sync)
tonic = { version = "0.12", default-features = false, features = ["prost", "tls", "tls-native-roots", "codegen", "transport"] }
prost = "0.13"

# Tokio runtime for sync→async gRPC bridge
tokio = { workspace = true }

# Storage engine (local + S3 backends)
object_store = { version = "0.11", features = ["aws"] }
bytes = "1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
temp-env = "0.3"
