[package]
name = "nap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the Narrative Addressing Protocol"
repository = "https://github.com/DigitalCreationsCo/narrativeengine"
homepage = "https://nap.sh"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
similar = { workspace = true }
rand = { workspace = true }
toml = "0.8"

# Certificate generation for Lore QUIC
rcgen = "0.13"

# Platform-independent directory paths
dirs = "5.0"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Semantic versioning for compatibility checks
semver = "1.0"

# Async traits - must be in main dependencies for async_trait macro
async-trait = "0.1"

# Tracing and logging
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# gRPC client for lore-server mutable store (branch ref sync)
tonic = { version = "0.12", features = ["prost", "tls", "tls-native-roots", "codegen", "transport", "channel"] }
prost = "0.13"
bytes = "1"

# Object storage backends
object_store = { version = "0.11", features = ["aws"] }

# Tokio runtime for sync→async gRPC bridge
tokio = { version = "1", features = ["full"] }

# Platform-specific process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[build-dependencies]
tonic = { version = "0.12", features = ["prost", "tls", "tls-native-roots", "codegen", "transport", "channel"] }
tonic-build = "0.12"
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
temp-env = "0.3"
