[package]
name = "nap-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the Narrative Addressing Protocol"
repository = "https://github.com/DigitalCreationsCo/narrativeengine"
homepage = "https://nap.sh"

[features]
default = []
lore-integration = []
test-utils = ["dep:tempfile"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
similar = { workspace = true }
rand = { workspace = true }
toml = "0.8"
rcgen = "0.13"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
async-trait = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tonic = { version = "0.12", features = ["prost", "tls", "tls-native-roots", "codegen", "transport", "channel"] }
prost = "0.13"
bytes = "1"
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1", features = ["full"] }
tempfile = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[build-dependencies]
tonic = { version = "0.12", features = ["prost", "tls", "tls-native-roots", "codegen", "transport", "channel"] }
tonic-build = "0.12"
prost-build = "0.13"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
temp-env = "0.3"
