[package]
name = "nap-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP resolver server for the Narrative Addressing Protocol"

[dependencies]
nap-core = { path = "../nap-core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
