[package]
name = "narrativeengine-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Schema-driven type generator for NarrativeEngine SDK bindings."

[[bin]]
name = "narrativeengine-codegen"
path = "src/main.rs"

[dependencies]
narrativeengine-core = { path = "../narrativeengine-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
