[package]
name = "narrativeengine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Canonical Rust implementation for the NarrativeEngine polyglot SDK."

[dependencies]
nap-core = { path = "../nap-core" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
