[package]
name = "narrativeengine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A deterministic retrieval-driven contextual storytelling engine."

[lib]
name = "narrativeengine"
crate-type = ["rlib"]

[dependencies]
nap-core = { path = "../nap-core" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
narrativeengine = { path = ".", package = "narrativeengine" }
proptest = { workspace = true }
rstest = { workspace = true }
