[package]
name = "narrativeengine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A deterministic retrieval-driven contextual storytelling engine."

[lib]
name = "narrativeengine"
crate-type = ["rlib"]

[dependencies]
nap-core = { path = "../nap-core" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.12" }
prost-build = { version = "0.13" }
protoc-bin-vendored = "3"

[dev-dependencies]
narrativeengine = { path = ".", package = "narrativeengine" }
proptest = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }


