[package]
name = "narrativeengine-python-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for the NarrativeEngine SDK."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
narrativeengine-core = { path = "../core", version = "0.1.0" }
pyo3.workspace = true

