[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "nap-sdk"
version = "0.2.0"
description = "Python SDK for NAP (Narrative Addressing Protocol), powered by Rust and PyO3."
readme = "../../README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "NAP Maintainers" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "maturin>=1.7,<2",
  "pytest>=8.3",
]

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "."
module-name = "nap_sdk._native"
features = ["pyo3/extension-module"]
binding = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
