[package]
name = "portalshq-narrativeengine-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PyO3 bindings for the NarrativeEngine SDK."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
narrativeengine = { path = "../../crates/narrativeengine", package = "portalshq-narrativeengine" }
pyo3 = { workspace = true, features = ["extension-module"] }
