[build-system]
requires = [
  "maturin>=1.7,<2"
  ]
build-backend = "maturin"

[project]
name = "narrativeengine"
version = "0.2.0"
description = "Python SDK for NarrativeEngine, powered by Rust and PyO3."
readme = "../../README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "NarrativeEngine Maintainers" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.7,<3"]
dev = [
  "maturin>=1.7,<2",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
  "pydantic>=2.7,<3",
]

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "."
module-name = "narrativeengine._native"
features = ["pyo3/extension-module"]
binding = "pyo3"
generate-import-targets = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["narrativeengine"]
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
