[package]
name = "nap-sdk-ts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NAPI-RS bindings for the NAP (Narrative Addressing Protocol) SDK."

[lib]
crate-type = ["cdylib"]

[dependencies]
nap-core = { path = "../../crates/nap-core" }
napi = { workspace = true, features = ["tokio_rt"] }
napi-derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
