[package]
name = "narrativeengine-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Schema-driven type generator for NarrativeEngine SDK bindings."

[[bin]]
name = "narrativeengine-codegen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
narrativeengine-core = { path = "../core", version = "0.1.0" }
serde_json.workspace = true

