[package]
name = "narrativeengine-typescript-bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "NAPI-RS bindings for the NarrativeEngine SDK."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
narrativeengine-core = { path = "../core", version = "0.1.0" }

[build-dependencies]
napi-build = "2.3.2"
